--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <div id="container">
         <h1>Roger House Portfolio</h1>
         <div class="tab">
-            <button class="tablinks" onclick="openTab(event, 'Home')" id="defaultOpen">Profile</button>
-            <button class="tablinks" onclick="openTab(event, 'Experience')">Experience</button>
-            <button class="tablinks" onclick="openTab(event, 'Education')">Education</button>
+            <button class="tablinks" onclick="openTab(event, 'rhportp1')" id="defaultOpen">Profile</button>
+            <button class="tablinks" onclick="openTab(event, 'rhportp2')">Experience</button>
+            <button class="tablinks" onclick="openTab(event, 'rhportp3')">Education</button>
             <button class="tablinks" onclick="openTab(event, 'Work Experience')">Work Experience</button>
             <button class="tablinks" onclick="openTab(event, 'Skills and Abilities')">Skills and Abilities</button>
             <button class="tablinks" onclick="openTab(event, 'Notable Projects')">Notable Projects</button>
